FrostWire 2.9.8 build <UNRELEASED> SEP/08/2025
 - freeze: ensure MusicUtils.removeFromPlaylist ContentResolver activity is in the background
 - freeze: sorting through too many results could cause an ANR when cleaning up titles
 - fix: logic bug in PerformersHelper.countMatchedTokens(), matched tokens were not counted correctly
 - improvement: PerformersHelper.sanitize() 8.8x speed gains in title normalization by not using a regex and instead simple string replacements
 - Avoid possible context leak on EngineBroadcastReceiver
 - maintenance: all license headers are GPL 3.0

FrostWire 2.9.7 build 752 APR/24/2025
 - crash: Fix NPE in PerformersHelper.sortByRelevance when currentQuery is null or empty
 - crash: Guard against showing UI after activity paused in LocalBroadcastReceiver
 - crash: Move startForeground call from onCreate to onStartCommand in MusicPlaybackService
 - crash: Centralize NotificationUpdateDaemon start in MainApplication and remove redundant scheduling from EngineIntentService
 - crash: Replace DrawerLayout with SafeDrawerLayout to prevent measure‑spec crashes
 - crash: Avoid TransactionTooLargeException by caching torrent metadata in temporary file, not passing it through an Intent Bundle
 - crash: Chaquopy marshall data too short fix. Ensure chaquopy packages python code from src/main/python
 - crash: Protect from race condition registering media button in MusicPlaybackService
 - freeze: StringUtils.fromHTML() method to prevent freezing when parsing large HTML strings

FrostWire 2.9.6 build 748 APR/11/2025
 - Fix: Avoid possible freeze sorting too many search results
 - yt_dlp-2025.03.31
 - gradle-8.11.1
 - com.android.tools.build:gradle:8.8.2
 - androidx.core:core:1.16.0
 - com.google.android.ump:user-messaging-platform:3.2.0
 - org.jetbrains.kotlin:kotlin-gradle-plugin:2.0.21
 - org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.0.21
 - com.google.firebase:firebase-bom:33.12.0
 - com.applovin:applovin-sdk:13.2.0