@@ -2,20 +2,21 @@ import groovy.swing.SwingBuilder
 import groovy.xml.Namespace
 
 /*
- * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
- * Copyright (c) 2011-2025, FrostWire(R). All rights reserved.
+ *     Created by Angel Leon (@gubatron), Alden Torres (aldenml)
+ *     Copyright (c) 2011-2025, FrostWire(R). All rights reserved.
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *     This program is free software: you can redistribute it and/or modify
+ *     it under the terms of the GNU General Public License as published by
+ *     the Free Software Foundation, either version 3 of the License, or
+ *     (at your option) any later version.
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *     This program is distributed in the hope that it will be useful,
+ *     but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *     GNU General Public License for more details.
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ *     You should have received a copy of the GNU General Public License
+ *     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
 apply plugin: 'com.android.application'
@@ -33,14 +34,14 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.13.0'
-        classpath 'org.codehaus.groovy:groovy-all:3.0.9'
+        classpath 'org.codehaus.groovy:groovy-all:3.0.25'
 
         classpath 'net.sf.proguard:proguard-gradle:6.2.2'
 
         classpath 'com.google.gms:google-services:4.4.2'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:3.0.3'
 
-        classpath 'com.chaquo.python:gradle:16.0.0'
+        classpath 'com.chaquo.python:gradle:16.1.0'
 
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:2.0.21'
     }
@@ -50,7 +51,12 @@ repositories {
     google()
     mavenCentral()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-    maven { url "https://dl.frostwire.com/maven" }
+    maven {
+        url "https://dl.frostwire.com/maven"
+        content {
+            includeGroup "com.frostwire"
+        }
+    }
 }
 
 def manifestVersionCode() {
@@ -96,7 +102,8 @@ boolean isAssembleRelease = gradle.startParameter.taskNames.contains("assembleRe
 android {
     namespace "com.frostwire.android"
 
-    compileSdk 35  // Android 14 UpsideDownCake
+    //compileSdk 35  // Android 14 UpsideDownCake
+    compileSdk 36  // Android 15 SnowCone
 
     defaultConfig {
         applicationId "com.frostwire.android"
@@ -213,10 +220,10 @@ android {
 
 dependencies {
     // @Nullable cross-os annotation
-    implementation 'org.jetbrains:annotations:26.0.1'
+    implementation 'org.jetbrains:annotations:26.0.2-1'
 
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'androidx.browser:browser:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'androidx.browser:browser:1.9.0'
     implementation 'androidx.core:core:1.16.0'
     implementation 'androidx.exifinterface:exifinterface:1.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
@@ -230,7 +237,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.re2j:re2j:1.7'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.12'
-    implementation 'com.squareup.picasso:picasso:3.0.0-SNAPSHOT'
+    implementation 'com.squareup.picasso3:picasso:3.0.0-alpha06'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.0.21'
     implementation "androidx.work:work-runtime-ktx:2.10.0"
 
