@@ -1,10 +1,19 @@
-FrostWire 2.9.8 build <UNRELEASED> SEP/08/2025
+FrostWire 3.0.0 build <UNRELEASED> SEP/08/2025
+ - new: Powered by jlibtorrent 2.0.12.5 with bittorrent v2 protocol support with hundreds of bug fixes and performance improvements
+ - yt_dlp-2025.09.05
  - freeze: ensure MusicUtils.removeFromPlaylist ContentResolver activity is in the background
  - freeze: sorting through too many results could cause an ANR when cleaning up titles
  - fix: logic bug in PerformersHelper.countMatchedTokens(), matched tokens were not counted correctly
  - improvement: PerformersHelper.sanitize() 8.8x speed gains in title normalization by not using a regex and instead simple string replacements
  - Avoid possible context leak on EngineBroadcastReceiver
  - maintenance: all license headers are GPL 3.0
+ - org.jetbrains:annotations:26.0.2-1
+ - androidx.appcompat:appcompat:1.7.1
+ - androidx.browser:browser:1.9.0
+ - com.chaquo.python:gradle:16.1.0, now with linked 16KB mode compatible with android compile sdk 36
+ - org.codehaus.groovy:groovy-all:3.0.25
+ - com.squareup.picasso3:picasso:3.0.0-alpha06 and refactor of ImageLoader to use it
+
 
 FrostWire 2.9.7 build 752 APR/24/2025
  - crash: Fix NPE in PerformersHelper.sortByRelevance when currentQuery is null or empty
